[package]
name = "rune_pager"
version = "0.2.0"
authors = ["drwilco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
phf_codegen = "0.11.2"
reqwest = { version = "0.12.8", features = ["blocking"] }
anyhow = "1.0.89"

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking"] }
regex = "1.11.0"
base64 = "0"
serde_json = "1"
serde = { version = "1.0.210", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
tungstenite = { version = "0.24.0", features = ["native-tls"] }
native-tls = "0.2.12"
rusqlite = { version = "0.32.1", features = ["bundled"] }
lazy_static = "1.5.0"
cached = "0.53.1"
anyhow = "1.0.89"
http = "1.1.0"
